Add JUnit tests